kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastify-benchmark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastify-benchmark
  template:
    metadata:
      name: fastify-benchmark
      labels:
        app: fastify-benchmark
    spec:
      containers:
        - name: server
          image: ghcr.io/zheli/fastify-benchmark:main
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /plaintext
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /plaintext
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 500M
            requests:
              cpu: 10m
              memory: 20M
          securityContext:
            privileged: false
            runAsUser: 10001
      restartPolicy: Always
      serviceAccountName: fastify-benchmark
