kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: fastify-benchmark
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
